test/output/syntax_error.out
Parser error: Parser Error at line 1, column 17
